Bug 1719330 - Limit line-scrolling to one page in scrollable elements with a short viewport. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D159662